clusters/cl01tl/manifests/gitea/TCPRoute-tcp-route-gitea-ssh.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-route-gitea-ssh
  namespace: gitea
  labels:
    app.kubernetes.io/name: tcp-route-gitea-ssh
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/part-of: gitea
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: ssh
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: gitea-ssh
          port: 22
          weight: 100
